--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 Django==4.2.7
 djangorestframework==3.14.0
 pandas==3.0.0
-reportlab==4.0.7
+reportlab>=4.0.9
 django-cors-headers==4.3.1
-Pillow==10.1.0
+Pillow>=10.3.0
 openpyxl==3.1.2
