--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,7 @@ reportlab>=4.0.9
 django-cors-headers==4.3.1
 Pillow>=10.3.0
 openpyxl==3.1.2
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+dj-database-url==2.1.0
+whitenoise==6.6.0
